# gcs-emulator

./: .gitignore  LICENSE  README.md
.github/workflows/: go.yml  gradle.yml  node.js.yml  php.yml  python.yml  ruby.yml
cpp-client/: CMakeLists.txt  main  main.cpp
csharp-client/: UnitTest1.cs  csharp-client.csproj  csharp-client.sln
gcs-emulator/: build.gradle  gradlew  settings.gradle
gcs-emulator/gradle/wrapper/: gradle-wrapper.properties
gcs-emulator/src/main/java/io/github/cloudemulators/gcsemulator/: GCSApplication.java  GCSServer.java  StorageExceptionFactory.java
gcs-emulator/src/main/java/io/github/cloudemulators/gcsemulator/endpoints/: Base.java  InsertListObjects.java
gcs-emulator/src/main/java/io/github/cloudemulators/gcsemulator/helpers/: Util.java
gcs-emulator/src/main/java/io/github/cloudemulators/gcsemulator/lifecycle/: Checker.java  CommandSender.java  (+3 more)
gcs-emulator/src/main/java/io/github/mahmoudbahaa/gcsemulator/: GCSApplication.java  GCSServer.java  Main.java  StorageExceptionFactory.java
gcs-emulator/src/test/java/io/github/cloudemulators/gcsemulator/: GcsEmulatorTest.java
gcs-emulator/src/test/java/io/github/mahmoudbahaa/gcsemulator/: GcsEmulatorTest.java
go-client/: bucket_test.go  go.mod
node-client/: package-lock.json  package.json
node-client/test/: bucket.test.ts  statuscodes.ts
php-client/: .phpunit.result.cache  BucketTest.php  composer.json
php-client/tests/: BucketTest.php  StatusCode.php
python-client/: requirements.txt  test_bucket_pytest.py
ruby-client/: Gemfile
ruby-client/test/: test_buckets.rb
(+28 files in other folders)
